added content to index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Webpage</title>
+    <title>Kevin Olencz</title>
 </head>
 <body>
     <header>
@@ -15,20 +15,19 @@
         <section>
             <h2>About Me</h2>
             <!-- Add your bio here -->
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod nisi et felis facilisis, sit amet dapibus urna aliquet.</p>
+            <p>Computer enjoyer and cryptography enthusiast.</p>
         </section>
 
         <section>
             <h2>Contact Me</h2>
             <!-- Add your contact information here -->
-            <p>Email: your.email@example.com</p>
-            <p>Phone: (123) 456-7890</p>
+            <p>Email: olenczk@gmail.com (prefered contact method)</p>
         </section>
     </main>
 
     <footer>
         <!-- Add your footer information here -->
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2023 Kevin Olencz. All rights reserved.</p>
     </footer>
 </body>
 </html>
