added more content and CSS

--- a/pagefiles/resume.html
+++ b/pagefiles/resume.html
@@ -70,7 +70,7 @@
     <main>
         <h2>Resume</h2>
         <!-- Add a link to your resume PDF file -->
-        <a class="resume-link" href="/Users/kevin/Desktop/PersonalWebsite/attachments/resume.pdf" target="_blank">Download Resume (PDF)</a>
+        <a class="resume-link" href="path/to/your/resume.pdf" target="_blank">Download Resume (PDF)</a>
     </main>
 
     <footer>
