--- a/index.html
+++ b/index.html
@@ -3,12 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kevin Olencz</title>
+    <title>Kevin Olencz - Personal Webpage</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f2f2f2;
+        }
+
+        header {
+            text-align: center;
+            padding: 2rem 0;
+            background-color: #333;
+            color: #fff;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        main {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2rem;
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        section {
+            margin-bottom: 2rem;
+        }
+
+        h2 {
+            border-bottom: 2px solid #333;
+            padding-bottom: 0.5rem;
+        }
+
+        p {
+            margin: 0;
+        }
+
+        footer {
+            text-align: center;
+            padding: 1rem 0;
+            background-color: #333;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <header>
         <!-- Add your picture here -->
-        <h1>Your Name</h1>
+        <h1>Kevin Olencz</h1>
     </header>
 
     <main>
@@ -21,7 +69,7 @@
         <section>
             <h2>Contact Me</h2>
             <!-- Add your contact information here -->
-            <p>Email: olenczk@gmail.com (prefered contact method)</p>
+            <p>Email: olenczk@gmail.com</p>
         </section>
     </main>
 
