--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             margin: 0;
             padding: 0;
             background-color: #f2f2f2;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* Set minimum height to fill the whole viewport */
         }
 
         header {
@@ -25,6 +28,7 @@
         }
 
         main {
+            flex: 1; /* Make the main section grow to fill the available space */
             max-width: 800px;
             margin: 0 auto;
             padding: 2rem;
@@ -79,3 +83,4 @@
     </footer>
 </body>
 </html>
+
