really fixed resume and spacing

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <nav>
         <!-- Page Selector -->
-        <a href="/personalwebsite/pagefiles/ResumeKevinOlencz (1).pdf">Resume</a>
+        <a href="/attachments/ResumeKevinOlencz (1).pdf">Resume</a>
         <a href="#">More Info</a>
         <a href="#">Current Thoughts</a>
     </nav>
@@ -87,7 +87,10 @@
         <section>
             <h2>About Me</h2>
             <!-- Add your bio here -->
-            <p>Computer enjoyer and cryptography enthusiast. I currently reside in the great state of Tennessee with my family.</p>
+            <p>Computer enjoyer and cryptography enthusiast. 
+                <br>I currently reside in the great state of Tennessee with my family.
+                <br>
+            </p>
         </section>
 
         <!-- Add more sections for "More Info" and "Current Thoughts" here if desired -->
