--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <nav>
         <!-- Page Selector -->
-        <a href="/attachments/ResumeKevinOlencz (1).pdf">Resume</a>
+        <a href="ko1936.github.io/attachments/ResumeKevinOlencz (1).pdf" target="_blank">Resume.</a>
         <a href="#">More Info</a>
         <a href="#">Current Thoughts</a>
     </nav>
@@ -87,8 +87,8 @@
         <section>
             <h2>About Me</h2>
             <!-- Add your bio here -->
-            <p>Computer enjoyer and cryptography enthusiast. 
-                <br>I currently reside in the great state of Tennessee with my family.
+            <p>Computer enjoyer and cryptography enthusiast. I currently
+                <br>reside in the great state of Tennessee with my family.
                 <br>
             </p>
         </section>
