--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <nav>
         <!-- Page Selector -->
-        <a href="/attachments/ResumeKevinOlencz (1).pdf" target="_blank">Resume</a>
+        <a href="/pagefiles/resume.html">Resume</a>
         <a href="#">More Info</a>
         <a href="#">Current Thoughts</a>
     </nav>
