--- a/pagefiles/resume.html
+++ b/pagefiles/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Resume</title>
+    <title>Resume</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -64,13 +64,13 @@
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Kevin Olencz</h1>
     </header>
 
     <main>
         <h2>Resume</h2>
         <!-- Add a link to your resume PDF file -->
-        <a class="resume-link" href="path/to/your/resume.pdf" target="_blank">Download Resume (PDF)</a>
+        <a class="resume-link" href="/attachments/ResumeKevinOlencz (1).pdf" target="_blank">Download Resume (PDF)</a>
     </main>
 
     <footer>
