--- a/index.html
+++ b/index.html
@@ -72,32 +72,27 @@
 </head>
 <body>
     <header>
-        <!-- Add your picture here -->
         <h1>Kevin Olencz</h1>
     </header>
 
     <nav>
-        <!-- Page Selector -->
-        <a href="/pagefiles/resume.html">Resume</a>
-        <a href="#">More Info</a>
+        <a href="/attachments/ResumeKevinOlencz (1).pdf">Resume</a>
         <a href="#">Current Thoughts</a>
+        <a href = "mailto: olenczk@gmail.com">Contact</a>
     </nav>
 
     <main>
         <section>
             <h2>About Me</h2>
-            <!-- Add your bio here -->
             <p>Computer enjoyer and cryptography enthusiast. I currently
                 <br>reside in the great state of Tennessee with my family.
                 <br>
             </p>
         </section>
 
-        <!-- Add more sections for "More Info" and "Current Thoughts" here if desired -->
     </main>
 
     <footer>
-        <!-- Add your footer information here -->
         <p>&copy; 2023 Kevin Olencz. All rights reserved.</p>
     </footer>
 </body>
