--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </header>
 
     <nav>
-        <a href="attachments/ResumeKevinOlencz (1).pdf">Resume</a>
+        <a href="attachments/ResumeKevinOlencz (1).pdf" target="_blank">Resume</a>
         <a href="#">Current Thoughts</a>
         <a href = "mailto: olenczk@gmail.com">Contact</a>
     </nav>
