--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kevin Olencz - Personal Webpage</title>
     <style>
+        /* Add background image to the body */
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-image: url('attachments/backgroundimage.webp');
+            background-size: cover; /* Optional: Adjust the background image size */
+            background-repeat: no-repeat; /* Optional: Prevent the image from repeating */
+        }
+    </style>
+    <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
