added more description

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     <nav>
         <a href="attachments/ResumeKevinOlencz (1).pdf" target="_blank">Resume</a>
-        <a href="#">Current Thoughts</a>
+        <!--  <a href="#">Portfolio</a>-->
         <a href = "mailto: olenczk@gmail.com">Contact</a>
     </nav>
 
@@ -97,8 +97,8 @@
         <section>
             <h2>About Me</h2>
             <p>Computer enjoyer and cryptography enthusiast. I currently
-                <br>reside in the great state of Tennessee with my family.
-                <br>
+                <br>reside in the great state of Tennessee with my family.<br>
+                <br>I hold a Bachelors of Computer Science with a focus on cybersecurity from Towson University<br>
             </p>
         </section>
 
