--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
             background-image: url('attachments/backgroundimage.webp');
             background-size: cover; /* Optional: Adjust the background image size */
             background-repeat: no-repeat; /* Optional: Prevent the image from repeating */
+            background-attachment: fixed; /* Optional: Fix the background image position */
+        }
+
+        /* Add a semi-transparent overlay to the background image */
+        body::before {
+            content: "";
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
         }
     </style>
     <style>
@@ -37,6 +49,8 @@
 
         header h1 {
             margin: 0;
+            font-size: 2.5rem;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
 
         nav {
@@ -50,6 +64,12 @@
             color: #fff;
             text-decoration: none;
             padding: 0.5rem 1rem;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
+        }
+
+        nav a:hover {
+            background-color: #555;
         }
 
         main {
@@ -59,6 +79,7 @@
             padding: 2rem;
             background-color: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
         }
 
         section {
@@ -68,6 +89,7 @@
         h2 {
             border-bottom: 2px solid #333;
             padding-bottom: 0.5rem;
+            margin-bottom: 1rem;
         }
 
         p {
@@ -80,6 +102,11 @@
             background-color: #333;
             color: #fff;
         }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
+        }
     </style>
 </head>
 <body>
@@ -89,23 +116,12 @@
 
     <nav>
         <a href="attachments/ResumeKevinOlencz (1).pdf" target="_blank">Resume</a>
-        <!--  <a href="#">Portfolio</a>-->
-        <a href = "mailto: olenczk@gmail.com">Contact</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="mailto:olenczk@gmail.com">Contact</a>
     </nav>
 
     <main>
         <section>
             <h2>About Me</h2>
             <p>Computer enjoyer and cryptography enthusiast. I currently
-                <br>reside in the great state of Tennessee with my family.<br>
-                <br>I hold a Bachelors of Computer Science with a focus on cybersecurity from Towson University<br>
-            </p>
-        </section>
-
-    </main>
-
-    <footer>
-        <p>&copy; 2023 Kevin Olencz. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+                <br>reside in the great state of Tennessee with my family.<br
