--- a/index.html
+++ b/index.html
@@ -12,51 +12,25 @@
             margin: 0;
             padding: 0;
             background-image: url('attachments/backgroundimage.webp');
-            background-size: cover; /* Optional: Adjust the background image size */
-            background-repeat: no-repeat; /* Optional: Prevent the image from repeating */
-            background-attachment: fixed; /* Optional: Fix the background image position */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-color: rgba(0, 0, 0, 0.5); /* Add a semi-transparent overlay */
         }
 
-        /* Add a semi-transparent overlay to the background image */
-        body::before {
-            content: "";
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-        }
-    </style>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f2f2f2;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh; /* Set minimum height to fill the whole viewport */
-        }
-
+        /* Style for the header */
         header {
             text-align: center;
             padding: 2rem 0;
-            background-color: #333;
+            background-color: rgba(51, 51, 51, 0.9); /* Darken the header background */
             color: #fff;
         }
 
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-        }
-
+        /* Style for the navigation bar */
         nav {
             display: flex;
             justify-content: center;
-            background-color: #444;
+            background-color: rgba(68, 68, 68, 0.9); /* Darken the navigation bar background */
             padding: 1rem 0;
         }
 
@@ -66,14 +40,16 @@
             padding: 0.5rem 1rem;
             border-radius: 4px;
             transition: background-color 0.3s ease;
+            margin: 0 5px; /* Add spacing between links */
         }
 
         nav a:hover {
-            background-color: #555;
+            background-color: rgba(85, 85, 85, 0.9); /* Darken the link background on hover */
         }
 
+        /* Style for the main content area */
         main {
-            flex: 1; /* Make the main section grow to fill the available space */
+            flex: 1;
             max-width: 800px;
             margin: 0 auto;
             padding: 2rem;
@@ -82,6 +58,7 @@
             border-radius: 8px;
         }
 
+        /* Style for the about me section */
         section {
             margin-bottom: 2rem;
         }
@@ -92,15 +69,13 @@
             margin-bottom: 1rem;
         }
 
-        p {
-            margin: 0;
-        }
-
+        /* Style for the footer */
         footer {
             text-align: center;
             padding: 1rem 0;
-            background-color: #333;
+            background-color: rgba(51, 51, 51, 0.9); /* Darken the footer background */
             color: #fff;
+            clear: both; /* Ensure footer clears other content */
         }
 
         footer p {
@@ -124,4 +99,17 @@
         <section>
             <h2>About Me</h2>
             <p>Computer enjoyer and cryptography enthusiast. I currently
-                <br>reside in the great state of Tennessee with my family.<br
+                <br>reside in the great state of Tennessee with my family.<br>
+                <br>I hold a Bachelors of Computer Science with a<br>
+                <br>focus on cybersecurity from Towson University<br>
+            </p>
+        </section>
+
+        <!-- Add more sections or content here to showcase your skills and projects -->
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Kevin Olencz. All rights reserved.</p>
+    </footer>
+</body>
+</html>
