--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kevin Olencz - Personal Webpage</title>
     <style>
-        /* Add background image to the body */
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -15,22 +14,20 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
-            background-color: rgba(0, 0, 0, 0.5); /* Add a semi-transparent overlay */
+            background-color: rgba(0, 0, 0, 0.5);
         }
 
-        /* Style for the header */
         header {
             text-align: center;
             padding: 2rem 0;
-            background-color: rgba(51, 51, 51, 0.9); /* Darken the header background */
+            background-color: rgba(51, 51, 51, 0.9);
             color: #fff;
         }
 
-        /* Style for the navigation bar */
         nav {
             display: flex;
             justify-content: center;
-            background-color: rgba(68, 68, 68, 0.9); /* Darken the navigation bar background */
+            background-color: rgba(68, 68, 68, 0.9);
             padding: 1rem 0;
         }
 
@@ -40,14 +37,13 @@
             padding: 0.5rem 1rem;
             border-radius: 4px;
             transition: background-color 0.3s ease;
-            margin: 0 5px; /* Add spacing between links */
+            margin: 0 5px;
         }
 
         nav a:hover {
-            background-color: rgba(85, 85, 85, 0.9); /* Darken the link background on hover */
+            background-color: rgba(85, 85, 85, 0.9);
         }
 
-        /* Style for the main content area */
         main {
             flex: 1;
             max-width: 800px;
@@ -58,7 +54,6 @@
             border-radius: 8px;
         }
 
-        /* Style for the about me section */
         section {
             margin-bottom: 2rem;
         }
@@ -69,13 +64,12 @@
             margin-bottom: 1rem;
         }
 
-        /* Style for the footer */
         footer {
             text-align: center;
             padding: 1rem 0;
-            background-color: rgba(51, 51, 51, 0.9); /* Darken the footer background */
+            background-color: rgba(51, 51, 51, 0.9);
             color: #fff;
-            clear: both; /* Ensure footer clears other content */
+            clear: both;
         }
 
         footer p {
