fixed styles and formatting

--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
             margin-bottom: 1rem;
         }
 
+        /* Fix for description paragraph */
+        p {
+            margin: 0;
+            word-wrap: break-word;
+            text-align: center; /* Center-align the paragraph */
+        }
+
         footer {
             text-align: center;
             padding: 1rem 0;
