--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </header>
 
     <nav>
-        <a href="attachments/ResumeKevinOlencz.pdf" target="_blank">Resume</a>
+        <a href="attachments/ResumeKevinOlencz (1).pdf" target="_blank">Resume</a>
         <!-- <a href="portfolio.html">Portfolio</a> -->
         <a href="mailto:olenczk@gmail.com">Contact</a>
     </nav>
