fixed another style issue

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
         p {
             margin: 0;
+            text-align: justify;
         }
 
         footer {
@@ -74,6 +75,10 @@
             background-color: #333;
             color: #fff;
             clear: both;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
         }
 
         footer p {
@@ -93,6 +98,10 @@
 
             nav a {
                 margin: 5px 0;
+            }
+
+            main {
+                padding: 1rem;
             }
         }
     </style>
