fixed another style issue

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
             text-align: justify;
         }
 
+        /* Add style for the p element inside the main section */
+        main p {
+            color: #fff;
+            text-align: justify;
+        }
+
         footer {
             text-align: center;
             padding: 1rem 0;
