--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
             text-align: justify;
         }
 
-        /* Add style for the p element inside the main section */
         main p {
-            color: #fff;
+            color: #333;
             text-align: justify;
         }
 
@@ -92,7 +91,6 @@
             font-size: 0.9rem;
         }
 
-        /* Mobile-friendly styles */
         @media (max-width: 600px) {
             header h1 {
                 font-size: 24px;
@@ -128,8 +126,6 @@
             <h2>About Me</h2>
             <p>Computer enjoyer and cryptography enthusiast. I currently reside in the great state of Tennessee with my family. I hold a Bachelors of Computer Science with a focus on cybersecurity from Towson University.</p>
         </section>
-
-        <!-- Add more sections or content here to showcase your skills and projects -->
     </main>
 
     <footer>
