fixed another style issue

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         <a href="attachments/ResumeKevinOlencz (1).pdf" target="_blank">Resume</a>
         <!-- <a href="portfolio.html">Portfolio</a> -->
         <a href="mailto:olenczk@gmail.com">Contact</a>
-    </nav>
+    </nav>ß
 
     <main>
         <section>
-            <h2>About Me</h2>
+            <h1>About Me</h1>
             <p>Computer enjoyer and cryptography enthusiast. I currently reside in the great state of Tennessee with my family. I hold a Bachelors of Computer Science with a focus on cybersecurity from Towson University.</p>
         </section>
     </main>
