fixed another style issue

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             max-width: 800px;
             margin: 0 auto;
             padding: 2rem;
-            background-color: #fff;
+            background-color: #f2f2f2; /* Updated the background color to a lighter gray */
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
@@ -69,8 +69,9 @@
             text-align: justify;
         }
 
+        /* Add style for the p element inside the main section */
         main p {
-            color: #333;
+            color: #000; /* Set text color to black */
             text-align: justify;
         }
 
@@ -91,6 +92,7 @@
             font-size: 0.9rem;
         }
 
+        /* Mobile-friendly styles */
         @media (max-width: 600px) {
             header h1 {
                 font-size: 24px;
@@ -119,11 +121,11 @@
         <a href="attachments/ResumeKevinOlencz (1).pdf" target="_blank">Resume</a>
         <!-- <a href="portfolio.html">Portfolio</a> -->
         <a href="mailto:olenczk@gmail.com">Contact</a>
-    </nav>ß
+    </nav>
 
     <main>
         <section>
-            <h1>About Me</h1>
+            <h2>About Me</h2>
             <p>Computer enjoyer and cryptography enthusiast. I currently reside in the great state of Tennessee with my family. I hold a Bachelors of Computer Science with a focus on cybersecurity from Towson University.</p>
         </section>
     </main>
@@ -133,3 +135,4 @@
     </footer>
 </body>
 </html>
+
