fixed another style issue

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         p {
             margin: 0;
             text-align: justify;
+            color: #000; /* Set text color to black */
         }
 
         /* Add style for the p element inside the main section */
@@ -135,4 +136,3 @@
     </footer>
 </body>
 </html>
-
