fixed another style issue

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
         p {
             margin: 0;
             text-align: justify;
-            color: #000; /* Set text color to black */
         }
 
         /* Add style for the p element inside the main section */
@@ -127,7 +126,7 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p>Computer enjoyer and cryptography enthusiast. I currently reside in the great state of Tennessee with my family. I hold a Bachelors of Computer Science with a focus on cybersecurity from Towson University.</p>
+            <p style="color: #000;">Computer enjoyer and cryptography enthusiast. I currently reside in the great state of Tennessee with my family. I hold a Bachelors of Computer Science with a focus on cybersecurity from Towson University.</p>
         </section>
     </main>
 
