--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
             border-bottom: 2px solid #333;
             padding-bottom: 0.5rem;
             margin-bottom: 1rem;
+            color: #000; /* Set text color to black */
         }
 
         p {
             margin: 0;
             text-align: justify;
+            color: #000; /* Set text color to black */
         }
 
         /* Add style for the p element inside the main section */
@@ -126,7 +128,7 @@
     <main>
         <section>
             <h2>About Me</h2>
-            <p style="color: #000;">Computer enjoyer and cryptography enthusiast. I currently reside in the great state of Tennessee with my family. I hold a Bachelors of Computer Science with a focus on cybersecurity from Towson University.</p>
+            <p>Computer enjoyer and cryptography enthusiast. I currently reside in the great state of Tennessee with my family. I hold a Bachelors of Computer Science with a focus on cybersecurity from Towson University.</p>
         </section>
     </main>
 
@@ -135,3 +137,4 @@
     </footer>
 </body>
 </html>
+
