fixed another style issue

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         footer {
             text-align: center;
             padding: 1rem 0;
-            background-color: #333;
+            background-color: transparent; /* Updated the background color to transparent */
             color: #fff;
             clear: both;
             position: fixed;
@@ -136,3 +136,4 @@
     </footer>
 </body>
 </html>
+
