--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             margin: 0 auto;
             padding: 2rem;
             background-color: #f2f2f2; /* Updated the background color to a lighter gray */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: none; /* Removed the box shadow */
             border-radius: 8px;
         }
 
@@ -82,10 +82,6 @@
             background-color: transparent; /* Updated the background color to transparent */
             color: #fff;
             clear: both;
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
         }
 
         footer p {
@@ -109,6 +105,13 @@
 
             main {
                 padding: 1rem;
+            }
+
+            footer {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                width: 100%;
             }
         }
     </style>
@@ -136,4 +139,5 @@
     </footer>
 </body>
 </html>
+
 
