--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
             padding: 1rem 0;
             background-color: transparent; /* Updated the background color to transparent */
             color: #fff;
-            clear: both;
         }
 
         footer p {
@@ -108,10 +107,7 @@
             }
 
             footer {
-                position: fixed;
-                bottom: 0;
-                left: 0;
-                width: 100%;
+                /* Remove the position fixed, so footer displays correctly on web */
             }
         }
     </style>
