fixed another style issue

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             padding: 1rem 0;
             background-color: transparent; /* Updated the background color to transparent */
             color: #fff;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            min-height: 100px; /* Adjust this value as needed */
         }
 
         footer p {
@@ -108,6 +112,7 @@
 
             footer {
                 /* Remove the position fixed, so footer displays correctly on web */
+                position: static;
             }
         }
     </style>
@@ -135,6 +140,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
